# vgi-anomaly

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  anomaly_worker.py  conftest.py  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
test/sql/: change_points.test  matrix_profile.test  zscore.test
tests/: test_detectors.py  test_scalars.py
vgi_anomaly/: __init__.py  detectors.py  scalars.py  worker.py
